--- a/creative-studio/public_html/index.html
+++ b/creative-studio/public_html/index.html
@@ -483,7 +483,7 @@
                             </a>
                             <p>It is very important for the customer to pay attention to the adipiscing process. Blessed are the escapes of the most tender, less option we charge, than the greater ones I will explain.</p> 
                             <p class="mt-3">
-                                Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a class="d-inline text-primary" href="http://www.devcrud.com">DevCRUD</a>
+                                Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a class="d-inline text-primary" href="">Niraj_Singh</a>
                             </p>                   
                         </li>
                     </ul>
