--- a/creative-studio/public_html/index.html
+++ b/creative-studio/public_html/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-5 col-lg-4">
-                    <img src="D:\Creative Studio  project\creative-studio\public_html\assets\imgs\1692716220650.jpg" alt="D" class="w-100 img-thumbnail mb-3">
+                    <img src="C:\Users\neera\Downloads\Projects\Creative Studio  project\creative-studio\public_html\assets\imgs\1692716220650.jpg" alt="D" class="w-100 img-thumbnail mb-3">
                 </div>
                 <div class="col-md-7 col-lg-8">
                     <h6 class="section-subtitle mb-0">We Create</h6>
